Замена логики дубликатов агентов на логику зеркал
