# controllers/apiserver/systemhandlers/controller.go
@@ -17,8 +17,8 @@ import (
 )
 
 type ParseUseCases interface {
-	NewBooks(ctx context.Context, urls []url.URL, autoVerify bool) (parsing.FirstHandleMultipleResult, error)
-	NewBooksMulti(ctx context.Context, urls []url.URL, autoVerify bool) (parsing.MultiHandleMultipleResult, error)
+	NewBooks(ctx context.Context, urls []url.URL, flags parsing.ParseFlags) (parsing.FirstHandleMultipleResult, error)
+	NewBooksMulti(ctx context.Context, urls []url.URL, flags parsing.ParseFlags) (parsing.MultiHandleMultipleResult, error)
 
 	BooksExists(ctx context.Context, urls []url.URL) ([]agentmodel.AgentBookCheckResult, error)
 	PagesExists(ctx context.Context, urls []agentmodel.AgentPageURL) ([]agentmodel.AgentPageCheckResult, error)
